--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ lerna-debug.log*
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 #file explorer files
 .DS_Store
+client_secret.apps.googleusercontent.com.json
 
 # Runtime data
 pids
